app/assets/styles/modules/_roomFeatures.css
.roomFeatures{

  & img {
    min-width: 360px;
    max-width: 100%;
    /*height: 240px;*/
  }

  &--textContent{
    text-align: center;


    &-title{
      font-size: 1.8rem;
      font-weight: bold;
      padding-left: 10px;
    }
    &-line{
      margin: 5px;
      width: 80vw;
      border: 1px solid #000;
      margin-left: 20px;
    }
    &-para{
      text-shadow: 1px 1px 9px #fff;
      margin-left: 10px;
      margin-top: 10px;
      font-size: 1.2rem;
      font-weight: bold;
    }
  }

  @mixin atMedium {

    margin-left: 25px;
    & img {
      image-size: responsive;
    }
    &--textContent{
      text-align: left;
      padding-top: 20px;
      padding-left: 15px;
      background-color: $lighterGold;
      max-width: 100%;
      &-title{
        width: 260px;
        padding-right: 10px;
        padding-bottom: 10px;
      }
      &-line{
        width: 170px;
        border: 1px solid $mainGold;
      }
      &-para{
        font-weight: normal;
        font-size: 1.2rem;
        line-height: 1.5rem;
      }
    }
  }

  @mixin atLarge {
    margin-left: 50px;
    & img {
      width: 620px;
      height: 420px;

    }
    &--textContent{
      padding-top: 50px;
      padding-left: 50px;
      width: 380px;
      height: 420px;

      &-title{
        width: 340px;
      }
      &-line{
        margin-left: 50px;
        margin-top: 15px;
        margin-bottom: 20px;

      }
      &-para{
        width: 290px;
        font-size: 1.5rem;
        line-height: 1.8rem;
      }
    }
  }

  &--extension{
    margin-top: 70px;
    @mixin atMedium {
      margin-top: 0px;

    }
    & > .row {
      margin-top: 30px;
      @mixin atMedium {
        margin-top: 50px;

      }
    }
  }

}

